--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedAreaChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
@@ -47,7 +49,7 @@
       </VBox>
    </top>
    <right>
-      <TitledPane animated="false" collapsible="false" prefHeight="454.0" prefWidth="202.0" text="Model" BorderPane.alignment="TOP_RIGHT">
+      <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Model" BorderPane.alignment="TOP_RIGHT">
          <content>
             <TableView>
               <columns>
@@ -65,8 +67,28 @@
    <center>
       <VBox prefHeight="633.0" prefWidth="659.0">
          <children>
-            <TitledPane collapsible="false" prefHeight="200.0" text="Pseudo-section" />
-            <TitledPane collapsible="false" text="Section" />
+            <TitledPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Pseudo-section">
+               <content>
+                  <StackedAreaChart maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" titleSide="BOTTOM">
+                    <xAxis>
+                      <NumberAxis label="X, m" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis label="sp, m" side="LEFT" />
+                    </yAxis>
+                  </StackedAreaChart>
+               </content></TitledPane>
+            <TitledPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Section">
+               <content>
+                  <StackedAreaChart maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                    <xAxis>
+                      <NumberAxis label="X, m" side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis label="Z, m" side="LEFT" />
+                    </yAxis>
+                  </StackedAreaChart>
+               </content></TitledPane>
          </children>
       </VBox>
    </center>
