--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -1,87 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.StackedAreaChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-
-<BorderPane fx:id="mainPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.AppViewController">
-   <top>
-       <VBox prefWidth="100.0" BorderPane.alignment="CENTER">
-           <MenuBar>
-               <Menu mnemonicParsing="false" text="%menuFile">
-                   <MenuItem mnemonicParsing="false" text="Создать" />
-                   <MenuItem fx:id="menuFileOpen" mnemonicParsing="false" onAction="#onMenuFileOpen" text="Открыть" />
-               <Menu mnemonicParsing="false" text="Интерпретация">
-                 <items>
-                   <MenuItem mnemonicParsing="false" text="Открыть STT-файл" />
-                 </items>
-               </Menu>
-               <MenuItem mnemonicParsing="false" text="Закрыть" />
-               </Menu>
-               <Menu mnemonicParsing="false" text="Редактировать">
-                   <MenuItem mnemonicParsing="false" text="Delete" />
-               </Menu>
-               <Menu mnemonicParsing="false" text="Помощь">
-                   <MenuItem mnemonicParsing="false" text="About" />
-               </Menu>
-           </MenuBar>
-           <ToolBar prefHeight="40.0" prefWidth="200.0">
-               <Button fx:id="inverseButton" mnemonicParsing="false" text="Обратная задача" />
-               <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" text="Кнопка" />
-           </ToolBar>
-       </VBox>
-   </top>
-   <right>
-       <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Модель" BorderPane.alignment="TOP_RIGHT">
-           <TableView>
-               <columns>
-                   <TableColumn minWidth="20.0" prefWidth="-1.0" text="Ro" />
-                   <TableColumn minWidth="20.0" prefWidth="-1.0" text="h" />
-                   <TableColumn minWidth="20.0" prefWidth="-1.0" text="z" />
-               </columns>
-              <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-              </columnResizePolicy>
-           </TableView>
-       </TitledPane>
-   </right>
-   <center>
-       <VBox prefHeight="633.0" prefWidth="659.0">
-           <TitledPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Псевдо-разрез">
-               <StackedAreaChart maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" titleSide="BOTTOM">
-                   <xAxis>
-                       <NumberAxis label="X, m" />
-                   </xAxis>
-                   <yAxis>
-                       <NumberAxis label="sp, m" side="LEFT" />
-                   </yAxis>
-               </StackedAreaChart>
-           </TitledPane>
-           <TitledPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Разрез">
-               <StackedAreaChart maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                   <xAxis>
-                       <NumberAxis label="X, m" side="BOTTOM" />
-                   </xAxis>
-                   <yAxis>
-                       <NumberAxis label="Z, m" side="LEFT" />
-                   </yAxis>
-               </StackedAreaChart>
-           </TitledPane>
-       </VBox>
-   </center>
-   <bottom>
-       <TitledPane collapsible="false" prefHeight="244.0" prefWidth="1000.0" text="Модель" BorderPane.alignment="CENTER">
-           <ListView orientation="HORIZONTAL" />
-       </TitledPane>
-   </bottom>
-</BorderPane>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="485.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="ru.nucodelabs.gem.AppViewController">
+    <children>
+        <MenuBar>
+            <menus>
+                <Menu mnemonicParsing="false" text="%file">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="%create"/>
+                        <Menu mnemonicParsing="false" text="%open">
+                            <items>
+                                <MenuItem fx:id="menuFileOpenSTT" mnemonicParsing="false" onAction="#onMenuFileOpenSTT"
+                                          text="STT"/>
+                            </items>
+                        </Menu>
+                        <MenuItem mnemonicParsing="false" text="%close"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="%edit">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="%help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="About"/>
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <SplitPane dividerPositions="0.5301866081229418" orientation="VERTICAL" VBox.vgrow="ALWAYS">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                    <children>
+                        <SplitPane dividerPositions="0.48205445544554454" prefHeight="160.0" prefWidth="200.0"
+                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <items>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TitledPane collapsible="false" prefHeight="200.0" prefWidth="200.0"
+                                                    text="%pseudoSection" AnchorPane.bottomAnchor="0.0"
+                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                    AnchorPane.topAnchor="0.0"/>
+                                    </children>
+                                </AnchorPane>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TitledPane collapsible="false" prefHeight="200.0" prefWidth="200.0"
+                                                    text="%geoSection" AnchorPane.bottomAnchor="0.0"
+                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                    AnchorPane.topAnchor="0.0"/>
+                                    </children>
+                                </AnchorPane>
+                            </items>
+                        </SplitPane>
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                    <children>
+                        <SplitPane dividerPositions="0.6714108910891089" AnchorPane.bottomAnchor="0.0"
+                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <items>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TitledPane fx:id="vesPane" collapsible="false" prefHeight="200.0"
+                                                    prefWidth="200.0" text="%ves" AnchorPane.bottomAnchor="0.0"
+                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                    AnchorPane.topAnchor="0.0"/>
+                                    </children>
+                                </AnchorPane>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <children>
+                                        <TitledPane collapsible="false" prefHeight="200.0" prefWidth="200.0"
+                                                    text="%modelTable" AnchorPane.bottomAnchor="0.0"
+                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                                    AnchorPane.topAnchor="0.0"/>
+                                    </children>
+                                </AnchorPane>
+                            </items>
+                        </SplitPane>
+                    </children>
+                </AnchorPane>
+            </items>
+        </SplitPane>
+    </children>
+</VBox>
