--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -76,8 +76,8 @@
                                            centerShape="false" legendVisible="false" minHeight="100.0"
                                            scaleShape="false">
                                     <xAxis>
-                                        <NumberAxis fx:id="vesCurveAxisX" label="AB/2, m" prefHeight="26.0"
-                                                    prefWidth="481.0" side="BOTTOM">
+                                        <NumberAxis fx:id="vesCurveAxisX" forceZeroInRange="false" label="AB/2, m"
+                                                    prefHeight="26.0" prefWidth="481.0" side="BOTTOM">
                                             <cursor>
                                                 <Cursor fx:constant="DEFAULT"/>
                                             </cursor>
@@ -100,7 +100,7 @@
                                         <Insets />
                                     </opaqueInsets>
                                     <padding>
-                                        <Insets bottom="20.0" left="40.0"/>
+                                        <Insets bottom="10.0" left="40.0"/>
                                     </padding>
                                 </LineChart>
                             </TitledPane>
